Ajustes estrutura de posicionamento

--- a/frame/aside-ultimas-noticias.html
+++ b/frame/aside-ultimas-noticias.html
@@ -7,6 +7,10 @@
 	<title>MasterPage</title>
 </head>
 <body>
-	<div id="aside">aside</div>
+	<div id="aside">
+		<div style="width: 200px; height: 100px; background-color: green; margin: 10px">
+			
+		</div>
+	</div>
 </body>
 </html>
