--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 	</header>
 	<div id="container-main">
 		<section>
-			<h1>Principais Notícias</h1>
-			<h1>Principais Notícias</h1>
-			<h1>Principais Notícias</h1>
-			<h1>Principais Notícias</h1>
-			<h1>Principais Notícias</h1>
-			<h1>Principais Notícias</h1>
+			<h1>Principais Notícias11111</h1>
+			<h1>Principais Notícias22222</h1>
+			<h1>Principais Notícias33333</h1>
+			<h1>Principais Notícias44444</h1>
+			<h1>Principais Notícias55555</h1>
 			<h1>Principais Notícias</h1>
 			<h1>Principais Notícias</h1>
 			<h1>Principais Notícias</h1>
@@ -30,7 +29,8 @@
 		<aside>
 			<iframe src="frame/aside-ultimas-noticias.html"></iframe>
 		</aside>
-	</div>
+	</div> <!--Fim container-main-->
 	<footer>footer</footer>
 </body>
+<!-- Fim do conteúdo -->
 </html>
