Concluido estrutura básica

--- a/frame/ultimas-noticias.html
+++ b/frame/ultimas-noticias.html
@@ -3,14 +3,12 @@
 <head lang="pt-BR">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/global.css">
-	<link rel="stylesheet" type="text/css" href="../css/aside-ultimas-noticias.css">
+	<link rel="stylesheet" type="text/css" href="../css/ultimas-noticias-style.css">
 	<title>MasterPage</title>
 </head>
 <body>
 	<div id="aside">
-		<div style="width: 200px; height: 100px; background-color: green; margin: 10px">
-			
-		</div>
+		<h1>Últimas Notícias</h1>
 	</div>
 </body>
 </html>
