--- a/_template.html
+++ b/_template.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/global.css">
-	<link rel="stylesheet" type="text/css" href="css/index-style.css">
+	<!-- *********************************************** SUBSTITUA ESSA LINHA DE  COMENTARIO PELO SEU ARQUIVO CSS! ********************************************* -->
 	<title>Portal de Notícias</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 	</header>
 	<div id="container-main">
 		<section>
-			<h1>Conteúdo</h1>
+			<h1>Conteúdo</h1> <!-- <=================================== O CONTEÚDO DEVE SER INSERIDO AQUI (Dentro de <section></section>)  -->
 		</section>
 		<aside>
 			<!--Não alterar nada dentro dessa tag! -->
