--- a/frame/master-page.html
+++ b/frame/master-page.html
@@ -10,21 +10,19 @@
 	<div id="navbar">
 		<nav>
 		  <ul>
-			<li><a id="item-home" href="#">NomeSite</a></li>
-			<li><a href="#">About Me</a></li>
-			<!--
-			<li><a href="#">Articles on HTML5 & CSS3</a>
-			  <ul id="submenu">
-				<li><a href="#">Difference between SVG vs. Canvas</a></li>
-				<li><a href="#">New features in HTML5</a></li>
-				<li><a href="#">Creating links to sections within a webpage</a></li>
-			  </ul>
-			</li>
-			-->
-			<li><a href="#">News</a></li>
-			<li><a href="#">Contact Us</a></li>
+			<li><a id="item-home" target="_parent" href="../index.html">CCNews</a></li>
+			<li><a href="#">Sobre nós</a></li>
+			<li><a href="#">Autores</a></li>
+			<li><a href="#">Contate-nos</a></li>
 		  </ul>
 		</nav>
+		<div id="container-form">
+			<form method="POST">
+				<input type="text" name="login" placeholder="E-mail" required/>
+				<input type="password" name="password" placeholder="Senha" required/>
+				<input type="submit" />
+			</form>
+		</div>
 	</div>
 </body>
 </html>
