Concluido aside ultimas noticias

--- a/frame/ultimas-noticias.html
+++ b/frame/ultimas-noticias.html
@@ -8,7 +8,34 @@
 </head>
 <body>
 	<div id="aside">
-		<h1>Últimas Notícias</h1>
+		<div class="noticia-aside">
+			<a href="">
+				<img src="http://placehold.it/240x120x" alt="Notícia">
+			</a>
+			<a href="#">Título da Notícia</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
+		</div>
+		<div class="noticia-aside">
+			<a href="">
+				<img src="http://placehold.it/240x120x" alt="Notícia">
+			</a>
+			<a href="#">Título da Notícia</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
+		</div>
+		<div class="noticia-aside">
+			<a href="">
+				<img src="http://placehold.it/240x120x" alt="Notícia">
+			</a>
+			<a href="#">Título da Notícia</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
+		</div>
+		<div class="noticia-aside">
+			<a href="">
+				<img src="http://placehold.it/240x120x" alt="Notícia">
+			</a>
+			<a href="#">Título da Notícia</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
+		</div>
 	</div>
 </body>
 </html>
