Pagina de autores concluida

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/index-style.css">
-	<title>Portal de Notícias</title>
+	<title>CCNews | Portal de Notícias</title>
 </head>
 <body>
 	<header>
