--- a/frame/master-page.html
+++ b/frame/master-page.html
@@ -11,16 +11,16 @@
 		<nav>
 		  <ul>
 			<li><a id="item-home" target="_parent" href="../index.html">CCNews</a></li>
-			<li><a href="#">Sobre nós</a></li>
-			<li><a href="#">Autores</a></li>
-			<li><a href="#">Contate-nos</a></li>
+			<li><a target="_parent" href="#">Sobre nós</a></li>
+			<li><a target="_parent" href="../autores.html">Autores</a></li>
+			<li><a target="_parent" href="#">Contate-nos</a></li>
 		  </ul>
 		</nav>
 		<div id="container-form">
 			<form method="POST">
 				<input type="text" name="login" placeholder="E-mail" required/>
 				<input type="password" name="password" placeholder="Senha" required/>
-				<input type="submit" />
+				<input type="submit">
 			</form>
 		</div>
 	</div>
