--- a/tests/new 1.html
+++ b/tests/new 1.html
@@ -7,13 +7,13 @@
 	</head>
 <body>
 	<div id="btn">
-		<button style="width:100px;" image="C:\workroot\github\ung-lpwi-news\teste\icone.jpg">
-		<img style="width:15px;" src="C:\workroot\github\ung-lpwi-news\teste\icone.jpg"/> 
+		<button style="width:100px;" image="icone.jpg">
+		<img style="width:15px;" src="icone.jpg"/> 
 		Enviar
 		</button><br><br>
 	</div>
 	<div id="imagem">
-		<img src="C:\workroot\github\ung-lpwi-news\teste\cidade.jpg"/>
+		<img src="cidade.jpg"/>
 		<div id="noticia">
 			<h2>NOVA YORQUE</h2>
 			<a href="noticia.html"><b>TEMPO REAL: ATENTADO AS TORRES GÊMEAS</b></a>
