--- a/autores.html
+++ b/autores.html
@@ -15,7 +15,7 @@
 			<h1>Autores</h1>
 			<div class="box-autor-left">
 				<img class="float-left img-rounded" src="http://placehold.it/150x150">
-				<h2>Nome do Autor</h2>
+				<h2>Priscila</h2>
 				<article class="clear-right">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
