Ajustes gerais para manter o padrão

--- a/autores.html
+++ b/autores.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/autores-style.css">
-	<title>Portal de Notícias</title>
+	<title>CCNews | Autores</title>
 </head>
 <body>
 	<header>
@@ -15,7 +15,7 @@
 			<h1>Autores</h1>
 			<div class="box-autor-left">
 				<img class="float-left img-rounded" src="http://placehold.it/150x150">
-				<h2>Priscila</h2>
+				<h2>Nome do Autor</h2>
 				<article class="clear-right">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
