--- a/frame/master-page.html
+++ b/frame/master-page.html
@@ -11,9 +11,9 @@
 		<nav>
 		  <ul>
 			<li><a id="item-home" target="_parent" href="../index.html">CCNews</a></li>
-			<li><a target="_parent" href="#">Sobre nós</a></li>
+			<li><a target="_parent" href="#">Sobre</a></li>
 			<li><a target="_parent" href="../autores.html">Autores</a></li>
-			<li><a target="_parent" href="#">Contate-nos</a></li>
+			<li><a target="_parent" href="../contate-nos.html">Contato</a></li>
 		  </ul>
 		</nav>
 		<div id="container-form">
