--- a/contate-nos.html
+++ b/contate-nos.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/contate-nos-style.css">
-	<title>Contate-nos</title>
+	<title>CCNews | Contato</title>
 </head>
 <body>
 	<header>
@@ -12,17 +12,19 @@
 	</header>
 	<div id="container-main">
 		<section class="contate-nos">
-			<h2>Contate-nos</h2><br/>
+			<h1>Contate-nos</h1>
 			<p>Preencha o formulário abaixo e envie sua mensagem, crítica ou sugestão.</p>
-			<br/>
 			<div class="formulario">
-				<form id="formContato" name="formcontato" method="post" action="http://url.com">
+				<form id="formContato" name="formcontato" method="POST" action="#">
 					<fieldset>
-					
-						<label>Nome:</label><input type="text" id="nome" name="nome" size="50" required autofocus placeholder="Digite seu nome" /><br />
-						<label>Email:</label><input type="email" id="email" name="email" size="50" required placeholder="Digite seu e-mail" /><br />
-						<label>Telefone:</label><input type="tel" id="telefone" name="telefone" size="50" pattern="[0-9]{2} [0-9]{4} [0-9]{4}" placeholder="11 11111111" title="Digite o DDD + 8 numeros" /><br />
-						<label>Cidade:</label><input type="text" id="cidade" name="cidade" size="50" required placeholder="Digite sua cidade" /><br />
+						<label>Nome:</label>
+						<input type="text" id="nome" name="nome" required autofocus placeholder="Digite seu nome" />
+						<label>Email:</label>
+						<input type="email" id="email" name="email" required placeholder="Digite seu e-mail" />
+						<label>Telefone:</label>
+						<input type="tel" id="telefone" name="telefone" pattern="[0-9]{2} [0-9]{4} [0-9]{4}" placeholder="99 99999999" title="Digite o DDD + 8 numeros" />
+						<label>Cidade:</label>
+						<input type="text" id="cidade" name="cidade" required placeholder="Digite sua cidade" />
 						<label>Estado:</label>
 						<select name="Estado" id="estado">
 							<option value="Selecione">Selecione</option>
@@ -52,16 +54,14 @@
 							<option value="Santa Catarina">Santa Catarina</option>
 							<option value="São Paulo">São Paulo</option>
 							<option value="Sergipe">Sergipe</option>
-							<option value="Tocantins">Tocantins</option>
-						</select><br />
-						<label>Mensagem:</label><textarea rows="4" cols="50" id="mensagem" name="mensagem" required placeholder="Digite sua mensagem"></textarea><br />
-						<input type="submit" id="btnEnviar" name="enviar" value="Enviar"/><br />
-					
+							<option value="Tocantins">Tocantins</option></select>
+						<label>Mensagem:</label>
+						<textarea rows="4" cols="50" id="mensagem" name="mensagem" required placeholder="Digite sua mensagem"></textarea>
+						<input type="submit" id="btnEnviar" name="enviar" value="Enviar"/>
 					</fieldset>
 				</form>
 			</div>
 		</section>
-		
 		<aside>
 			<!--Não alterar nada dentro dessa tag! -->
 			<iframe src="frame/ultimas-noticias.html"></iframe>
