Pagina de noticia feita.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,49 @@
 		<iframe src="frame/master-page.html"></iframe>
 	</header>
 	<div id="container-main">
-		<section>
-			<h1>Conteúdo</h1>
-		</section>
-		<aside>
-			<!--Não alterar nada dentro dessa tag! -->
-			<iframe src="frame/ultimas-noticias.html"></iframe>
-		</aside>
+	<section>			
+		<!--Imagens com noticias! -->
+		<div class="principal">
+			<a href="#">
+				<img src="http://placehold.it/570x290x" alt="Notícia">
+			</a>
+			<a href="#">O título da notícia tem que ser Importante</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>		
+		</div>
+		   	<!--Imagens com Sub-noticias! -->		
+		<div class="sub-Principal">
+			<a href="#">
+				<img src="http://placehold.it/330x340" alt="subNotícia">
+			</a>
+			<a href="#">O título da notícia tem que ser Importante</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
+
+                 <!--Imagens de Noticas do lado da Sub-Noticias- -->		
+		</div>
+		<div class="sub1-Principal">	
+			<a href="#">
+				<img src="http://placehold.it/210x130" alt="sub1Notícia">
+			</a>
+			<a href="#">Noticias de grau de nivel médio</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
+	
+		</div>
+		<!--Imagens de Noticas do lado da Sub-Noticias- -->
+		<div class="sub2-Principal">	
+			<a href="#">
+				<img src="http://placehold.it/210x130" alt="sub2Notícia">
+			</a>
+			<a href="#">Noticias de grau de muito baixo</a>
+			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>		
+		</div>
+
+		
+
+	</section>
+	<aside>
+		<!--Não alterar nada dentro dessa tag! -->
+		<iframe src="frame/ultimas-noticias.html"></iframe>
+	</aside>
 	</div> <!--Fim container-main-->
 	<footer>
 		<!--Não alterar nada dentro dessa tag! -->
