Ajustes na página de notícia

--- a/index.html
+++ b/index.html
@@ -8,56 +8,164 @@
 </head>
 <body>
 	<header>
-		<!--Não alterar nada dentro dessa tag! -->
 		<iframe src="frame/master-page.html"></iframe>
 	</header>
 	<div id="container-main">
-	<section>			
-		<!--Imagens com noticias! -->
-		<div class="principal">
-			<a href="#">
-				<img src="http://placehold.it/570x290x" alt="Notícia">
-			</a>
-			<a href="#">O título da notícia tem que ser Importante</a>
-			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>		
-		</div>
-		   	<!--Imagens com Sub-noticias! -->		
-		<div class="sub-Principal">
-			<a href="#">
-				<img src="http://placehold.it/330x340" alt="subNotícia">
-			</a>
-			<a href="#">O título da notícia tem que ser Importante</a>
-			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
-
-                 <!--Imagens de Noticas do lado da Sub-Noticias- -->		
-		</div>
-		<div class="sub1-Principal">	
-			<a href="#">
-				<img src="http://placehold.it/210x130" alt="sub1Notícia">
-			</a>
-			<a href="#">Noticias de grau de nivel médio</a>
-			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
-	
-		</div>
-		<!--Imagens de Noticas do lado da Sub-Noticias- -->
-		<div class="sub2-Principal">	
-			<a href="#">
-				<img src="http://placehold.it/210x130" alt="sub2Notícia">
-			</a>
-			<a href="#">Noticias de grau de muito baixo</a>
-			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>		
-		</div>
-
-		
-
-	</section>
+		<section>			
+			<div class="nivel-um">
+				<a href="#">
+					<img src="http://placehold.it/700x250x" alt="Notícia de nível 1">
+				</a>
+				<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo.</a>
+				<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now. Lorem ipsum dolor sit amet, a elit, sed do eiusmod. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia..</p>		
+			</div>	
+			<div class="row-for-float">
+				<div class="nivel-dois">
+					<a href="#">
+						<img src="http://placehold.it/300x400" alt="Notícia de nível 2">
+					</a>
+					<a href="#">Lorem ipsum dolor sit amet.</a>
+					<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>	
+				</div>
+				<div class="nivel-tres">	
+					<a href="#">
+						<img src="http://placehold.it/210x130" alt="Notícia de nível 3">
+					</a>
+					<div class="nivel-tres-texto">
+						<a href="#">Lorem ipsum sit</a>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua enim admur.</p>
+					</div>
+				</div>
+				<div class="nivel-tres">	
+					<a href="#">
+						<img src="http://placehold.it/210x130" alt="Notícia de nível 3">
+					</a>
+					<div class="nivel-tres-texto">
+						<a href="#">Lorem ipsum sit</a>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua enim admur.</p>
+					</div>
+				</div>
+				<div class="nivel-tres">	
+					<a href="#">
+						<img src="http://placehold.it/210x130" alt="Notícia de nível 3">
+					</a>
+					<div class="nivel-tres-texto">
+						<a href="#">Lorem ipsum sit</a>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua enim admur.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row-for-float">
+				<div class="nivel-quatro um">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro dois">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro tres">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro quatro">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+			</div>
+			<div class="row-for-float">
+				<div class="nivel-quatro um">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro dois">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro tres">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro quatro">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+			</div>
+			<div class="row-for-float">
+				<div class="nivel-quatro um">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro dois">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro tres">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+				<div class="nivel-quatro quatro">	
+					<a href="#">
+						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
+					</a>
+					<a href="#">Lorem ipsum sit</a>
+					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
+					tempor incididunt.</p>
+				</div>
+			</div>
+		</section>
 	<aside>
-		<!--Não alterar nada dentro dessa tag! -->
 		<iframe src="frame/ultimas-noticias.html"></iframe>
 	</aside>
 	</div> <!--Fim container-main-->
 	<footer>
-		<!--Não alterar nada dentro dessa tag! -->
 		<iframe src="frame/rodape.html"></iframe>
 	</footer>
 </body>
