--- a/autores.html
+++ b/autores.html
@@ -17,48 +17,48 @@
 				<img class="float-left img-rounded" src="http://placehold.it/150x150">
 				<h2>Nome do Autor</h2>
 				<article class="clear-right">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</article>
 			</div>
 			<div class="box-autor-right">
 				<img class="float-right img-rounded" src="http://placehold.it/150x150">
 				<h2>Nome do Autor</h2>
 				<article class="clear-left">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</article>
 			</div>
 			<div class="box-autor-left">
 				<img class="float-left img-rounded" src="http://placehold.it/150x150">
 				<h2>Nome do Autor</h2>
 				<article class="clear-right">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</article>
 			</div>
 			<div class="box-autor-right">
 				<img class="float-right img-rounded" src="http://placehold.it/150x150">
 				<h2>Nome do Autor</h2>
 				<article class="clear-left">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</article>
 			</div>
 		</section>
