--- a/contate-nos.html
+++ b/contate-nos.html
@@ -17,16 +17,16 @@
 			<div class="formulario">
 				<form id="formContato" name="formcontato" method="POST" action="#">
 					<fieldset>
-						<label>Nome:</label>
+						<label for="nome">Nome</label>
 						<input type="text" id="nome" name="nome" required autofocus placeholder="Digite seu nome" />
-						<label>Email:</label>
+						<label for="email">Email</label>
 						<input type="email" id="email" name="email" required placeholder="Digite seu e-mail" />
-						<label>Telefone:</label>
+						<label for="telefone">Telefone</label>
 						<input type="tel" id="telefone" name="telefone" pattern="[0-9]{2} [0-9]{4} [0-9]{4}" placeholder="99 99999999" title="Digite o DDD + 8 numeros" />
-						<label>Cidade:</label>
+						<label for="cidade">Cidade</label>
 						<input type="text" id="cidade" name="cidade" required placeholder="Digite sua cidade" />
-						<label>Estado:</label>
-						<select name="Estado" id="estado">
+						<label for="estado">Estado</label>
+						<select name="estado" id="estado">
 							<option value="Selecione">Selecione</option>
 							<option value="Acre">Acre</option>
 							<option value="Alagoas">Alagoas</option>
@@ -55,7 +55,7 @@
 							<option value="São Paulo">São Paulo</option>
 							<option value="Sergipe">Sergipe</option>
 							<option value="Tocantins">Tocantins</option></select>
-						<label>Mensagem:</label>
+						<label for="mensagem">Mensagem</label>
 						<textarea rows="4" cols="50" id="mensagem" name="mensagem" required placeholder="Digite sua mensagem"></textarea>
 						<input type="submit" id="btnEnviar" name="enviar" value="Enviar"/>
 					</fieldset>
