Pagina de noticias

--- a/noticia.html
+++ b/noticia.html
@@ -3,7 +3,8 @@
 <head lang="pt-BR">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
-	<!-- *********************************************** SUBSTITUA ESSA LINHA DE  COMENTARIO PELO SEU ARQUIVO CSS! ********************************************* -->
+	<link rel="stylesheet" type="text/css" href="css/noticias-style.css">
+	<!-- **Pagina de noticias** -->
 	<title>Portal de Notícias</title>
 </head>
 <body>
@@ -13,8 +14,28 @@
 	</header>
 	<div id="container-main">
 		<section>
-			<p>Teste conteudo - Priscila</p>
-			<img src="http://placehold.it/50x50"/>
+		<div class="principal">
+		<a href ="#">"Precisávamos transformar pressão em alegria", diz Tite, sobre "obrigação"</a>
+		
+			<h1> Contra o Joinville, técnico admite que Corinthians entrou pressionado diante de um adversário cansado e na vice-lanterna do Brasileirão
+			</h1>
+			
+			<img src="http://placehold.it/280x360" alt= "Foto noticia" style = "float: left;"> 
+			
+			<p> Tite admitiu em entrevista coletiva: havia no ar uma "obrigação" de vencer o Joinville,
+			time cansado fisicamente por ter jogado na noite de quinta-feira (contra a Chapecoense, empate em 0 a 0)
+			e que ocupa a zona do rebaixamento desde o início do Brasileirão. Com a Arena Corinthians com recorde de público (41.809 pagantes),
+			o treinador temia que a demora na abertura do placar se virasse contra a equipe. 
+			Mas Malcom, Uendel e Vagner Love fizeram os gols que deram tranquilidade e a vitória ao Timão,
+			líder do Brasileirão e perto de uma marca expressiva: caso não perca nas próxima rodada (contra o Inter, em Porto Alegre, quarta-feira),
+			a equipe igualará as maiores sequências invictas dentro de uma mesma edição do Brasileiro 
+			desde a implantação dos pontos corridos, em 2003. Os recordes foram alcançados pelo São Paulo em 2008,
+			e pelo Atlético-PR em 2004, ambos com 18 jogos de invencibilidade. Tanto o Tricolor Paulista quanto o
+			Furacão tiveram 12 vitórias e seis empates.
+			– Nossa responsabilidade era muito grande, era preciso tirar esse peso de ter "obrigação" 
+			de ganhar, essa pressão. Precisávamos transformar essa pressão em alegria, esse foi o tema da palestra – disse Tite.
+			</p>
+		</div>	
 		</section>
 		<aside>
 			<!--Não alterar nada dentro dessa tag! -->
