alteração de titulo

--- a/noticia.html
+++ b/noticia.html
@@ -15,7 +15,7 @@
 	<div id="container-main">
 		<section>
 		<div class="principal">
-		<a href ="#">"Precisávamos transformar pressão em alegria", diz Tite, sobre "obrigação"</a>
+		<a href ="#">"Precisávamos transformar pressão em alegria", diz Tite.</a>
 		
 			<h1> Contra o Joinville, técnico admite que Corinthians entrou pressionado diante de um adversário cansado e na vice-lanterna do Brasileirão
 			</h1>
