Criado página Sobre e ajustes na página Notícia

--- a/frame/master-page.html
+++ b/frame/master-page.html
@@ -11,7 +11,7 @@
 		<nav>
 		  <ul>
 			<li><a id="item-home" target="_parent" href="../index.html">CCNews</a></li>
-			<li><a target="_parent" href="#">Sobre</a></li>
+			<li><a target="_parent" href="../sobre.html">Sobre</a></li>
 			<li><a target="_parent" href="../autores.html">Autores</a></li>
 			<li><a target="_parent" href="../contate-nos.html">Contato</a></li>
 		  </ul>
