--- a/frame/ultimas-noticias.html
+++ b/frame/ultimas-noticias.html
@@ -9,31 +9,31 @@
 <body>
 	<div id="aside">
 		<div class="noticia-aside">
-			<a href="">
+			<a target="_parent" href="../noticia.html">
 				<img src="http://placehold.it/240x120x" alt="Notícia">
 			</a>
-			<a href="#">Título da Notícia</a>
+			<a target="_parent" href="../noticia.html">Título da Notícia</a>
 			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
 		</div>
 		<div class="noticia-aside">
-			<a href="">
+			<a target="_parent" href="../noticia.html">
 				<img src="http://placehold.it/240x120x" alt="Notícia">
 			</a>
-			<a href="#">Título da Notícia</a>
+			<a target="_parent" href="../noticia.html">Título da Notícia</a>
 			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
 		</div>
 		<div class="noticia-aside">
-			<a href="">
+			<a target="_parent" href="../noticia.html">
 				<img src="http://placehold.it/240x120x" alt="Notícia">
 			</a>
-			<a href="#">Título da Notícia</a>
+			<a target="_parent" href="../noticia.html">Título da Notícia</a>
 			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
 		</div>
 		<div class="noticia-aside">
-			<a href="">
+			<a target="_parent" href="../noticia.html">
 				<img src="http://placehold.it/240x120x" alt="Notícia">
 			</a>
-			<a href="#">Título da Notícia</a>
+			<a target="_parent" href="../noticia.html">Título da Notícia</a>
 			<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>
 		</div>
 	</div>
