--- a/index.html
+++ b/index.html
@@ -13,46 +13,46 @@
 	<div id="container-main">
 		<section>			
 			<div class="nivel-um">
-				<a href="#">
+				<a href="noticia.html">
 					<img src="http://placehold.it/700x250x" alt="Notícia de nível 1">
 				</a>
-				<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo.</a>
+				<a href="noticia.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo.</a>
 				<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now. Lorem ipsum dolor sit amet, a elit, sed do eiusmod. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia..</p>		
 			</div>	
 			<div class="row-for-float">
 				<div class="nivel-dois">
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/300x400" alt="Notícia de nível 2">
 					</a>
-					<a href="#">Lorem ipsum dolor sit amet.</a>
+					<a href="noticia.html">Lorem ipsum dolor sit amet.</a>
 					<p>Lorem ipsum dolor sit amet, elites det adipisicing yloren sumpe now.</p>	
 				</div>
 				<div class="nivel-tres">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/210x130" alt="Notícia de nível 3">
 					</a>
 					<div class="nivel-tres-texto">
-						<a href="#">Lorem ipsum sit</a>
+						<a href="noticia.html">Lorem ipsum sit</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua enim admur.</p>
 					</div>
 				</div>
 				<div class="nivel-tres">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/210x130" alt="Notícia de nível 3">
 					</a>
 					<div class="nivel-tres-texto">
-						<a href="#">Lorem ipsum sit</a>
+						<a href="noticia.html">Lorem ipsum sit</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua enim admur.</p>
 					</div>
 				</div>
 				<div class="nivel-tres">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/210x130" alt="Notícia de nível 3">
 					</a>
 					<div class="nivel-tres-texto">
-						<a href="#">Lorem ipsum sit</a>
+						<a href="noticia.html">Lorem ipsum sit</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua enim admur.</p>
 					</div>
@@ -60,102 +60,102 @@
 			</div>
 			<div class="row-for-float">
 				<div class="nivel-quatro um">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro dois">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro tres">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro quatro">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 			</div>
 			<div class="row-for-float">
 				<div class="nivel-quatro um">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro dois">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro tres">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro quatro">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 			</div>
 			<div class="row-for-float">
 				<div class="nivel-quatro um">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro dois">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro tres">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
 				<div class="nivel-quatro quatro">	
-					<a href="#">
+					<a href="noticia.html">
 						<img src="http://placehold.it/160x170" alt="Notícia de nível 3">
 					</a>
-					<a href="#">Lorem ipsum sit</a>
+					<a href="noticia.html">Lorem ipsum sit</a>
 					<p>Lorem ipsum dolor sit amet, sito adipisicing elit, sed do eiusmod
 					tempor incididunt.</p>
 				</div>
