Segue footer ainda em construção

--- a/frame/rodape.html
+++ b/frame/rodape.html
@@ -7,8 +7,24 @@
 	<title>MasterPage</title>
 </head>
 <body>
-	<div id="footer">
-		<h1>Rodapé</h1>
+<div class id="footer"><br>
+<div class="esq">
+	<a href="privacidade.com">Privacidade</a>	
+
+	<div class="dir">
+	<a href="AnuncienoCCNews.com">Anuncie no CCNews</a>
+	</a>
+	<div class="cen">
+	<a href="sobre.com">Sobre nossos anúncios</a>
+	<br>
+	<br>
+	<br>
+	<br>
+	<p>Copyright &copy; 2015 - CCNews</p>
 	</div>
+	</div>
+</div>
+</div>
 </body>
 </html>
+
