APENAS COM ERROS NO W3C

--- a/frame/rodape.html
+++ b/frame/rodape.html
@@ -7,24 +7,34 @@
 	<title>MasterPage</title>
 </head>
 <body>
-<div class id="footer"><br>
-<div class="esq">
-	<a href="privacidade.com">Privacidade</a>	
-
-	<div class="dir">
-	<a href="AnuncienoCCNews.com">Anuncie no CCNews</a>
-	</a>
-	<div class="cen">
-	<a href="sobre.com">Sobre nossos anúncios</a>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p>Copyright &copy; 2015 - CCNews</p>
+<div class id="footer">
+	<div id="time"><br>
+		<nav><br>
+		<p>Equipe<p>
+		<ul>
+			<li>Fabio Pereira</li>
+			<li>Ingrid Lustosa</li>
+			<li>João freire</li>
+			<li>Max Diniz</li>
+			<li>Paulo Felix</li>
+		</ul>
+		</nav>
 	</div>
+	<div class="marcaung">
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\logo_ung.jpg" alt="Inserção imagem do logotipo ung"/>
+	</div>
+	<div class="selo_html">
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\selo_html.jpg"/>
+	</div>
+	<div class="selo_css">
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\selo_css.png"/>
+	</div>
+	<div class="facebook">
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\facebook.jpg"/>
+	</div>
+	<div class="twiter">
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\twiter.jpg"/>
 	</div>
 </div>
-</div>
-</body>
 </html>
 
