--- a/frame/rodape.html
+++ b/frame/rodape.html
@@ -21,19 +21,19 @@
 		</nav>
 	</div>
 	<div class="marcaung">
-		<img src="C:\workroot\github\ung-lpwi-news\imagens\logo_ung.jpg" alt="Inserção imagem do logotipo ung"/>
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\logo_ung.jpg" alt="Inserção imagem do logotipo ung" title="logotipo"/>
 	</div>
 	<div class="selo_html">
-		<img src="C:\workroot\github\ung-lpwi-news\imagens\selo_html.jpg"/>
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\selo_html.jpg" alt="selo html"/>
 	</div>
 	<div class="selo_css">
-		<img src="C:\workroot\github\ung-lpwi-news\imagens\selo_css.png"/>
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\selo_css.png"/ alt="selo css">
 	</div>
 	<div class="facebook">
-		<img src="C:\workroot\github\ung-lpwi-news\imagens\facebook.jpg"/>
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\facebook.jpg" alt="facebook"/>
 	</div>
 	<div class="twiter">
-		<img src="C:\workroot\github\ung-lpwi-news\imagens\twiter.jpg"/>
+		<img src="C:\workroot\github\ung-lpwi-news\imagens\twiter.jpg" alt="twiter"/>
 	</div>
 </div>
 </html>
