Ajustes rodapé e finalização do site para apresentação

--- a/_template.html
+++ b/_template.html
@@ -3,6 +3,7 @@
 <head lang="pt-BR">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="shortcut icon" type="image/png" href="img/icontitle.png">
 	<!-- *********************************************** SUBSTITUA ESSA LINHA DE  COMENTARIO PELO SEU ARQUIVO CSS! ********************************************* -->
 	<title>Portal de Notícias</title>
 </head>
