--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/index-style.css">
+	<link rel="shortcut icon" type="image/png" href="img/icontitle.png">
 	<title>CCNews | Portal de Notícias</title>
 </head>
 <body>
@@ -11,7 +12,8 @@
 		<iframe src="frame/master-page.html"></iframe>
 	</header>
 	<div id="container-main">
-		<section>			
+		<section>
+			<h1>Principais notícias</h1>			
 			<div class="nivel-um">
 				<a href="noticia.html">
 					<img src="http://placehold.it/700x250x" alt="Notícia de nível 1">
