--- a/sobre.html
+++ b/sobre.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/sobre-style.css">
-	<!-- **Pagina de noticias** -->
-	<title>Portal de Notícias</title>
+	<link rel="shortcut icon" type="image/png" href="img/icontitle.png">
+	<title>CCNews | Sobre</title>
 </head>
 <body>
 	<header>
@@ -16,7 +16,7 @@
 		<section>
 			<div id="container-sobre">
 				<h1>Nossa História</h1>
-				<article>
+				<div>
 					<img id="img-um" src="http://placehold.it/400x300" alt="Foto 1 - História">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -96,7 +96,7 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					<img id="img-tres" src="http://placehold.it/740x300" alt="Foto 3 - História">
-				</article>
+				</div>
 			</div>
 		</section>
 		<aside>
