--- a/autores.html
+++ b/autores.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/autores-style.css">
+	<link rel="shortcut icon" type="image/png" href="img/icontitle.png">
 	<title>CCNews | Autores</title>
 </head>
 <body>
@@ -14,52 +15,52 @@
 		<section>
 			<h1>Autores</h1>
 			<div class="box-autor-left">
-				<img class="float-left img-rounded" src="http://placehold.it/150x150">
+				<img class="float-left img-rounded" src="http://placehold.it/150x150" alt="autor">
 				<h2>Nome do Autor</h2>
-				<article class="clear-right">
+				<div class="aricle clear-right">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</article>
+				</div>
 			</div>
 			<div class="box-autor-right">
-				<img class="float-right img-rounded" src="http://placehold.it/150x150">
+				<img class="float-right img-rounded" src="http://placehold.it/150x150" alt="autor">
 				<h2>Nome do Autor</h2>
-				<article class="clear-left">
+				<div class="aricle clear-left">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</article>
+				</div>
 			</div>
 			<div class="box-autor-left">
-				<img class="float-left img-rounded" src="http://placehold.it/150x150">
+				<img class="float-left img-rounded" src="http://placehold.it/150x150" alt="autor">
 				<h2>Nome do Autor</h2>
-				<article class="clear-right">
+				<div class="aricle clear-right">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</article>
+				</div>
 			</div>
 			<div class="box-autor-right">
-				<img class="float-right img-rounded" src="http://placehold.it/150x150">
+				<img class="float-right img-rounded" src="http://placehold.it/150x150" alt="autor">
 				<h2>Nome do Autor</h2>
-				<article class="clear-left">
+				<div class="aricle clear-left">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</article>
+				</div>
 			</div>
 		</section>
 		<aside>
