--- a/contate-nos.html
+++ b/contate-nos.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/contate-nos-style.css">
+	<link rel="shortcut icon" type="image/png" href="img/icontitle.png">
 	<title>CCNews | Contato</title>
 </head>
 <body>
