--- a/frame/master-page.html
+++ b/frame/master-page.html
@@ -20,7 +20,7 @@
 			<form method="POST">
 				<input type="text" name="login" placeholder="E-mail" required/>
 				<input type="password" name="password" placeholder="Senha" required/>
-				<input type="submit">
+				<input type="submit" value="Entrar">
 			</form>
 		</div>
 	</div>
