--- a/noticia.html
+++ b/noticia.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/noticia-style.css">
+	<link rel="shortcut icon" type="image/png" href="img/icontitle.png">
 	<!-- **Pagina de noticias** -->
-	<title>Portal de Notícias</title>
+	<title>CCNews | Notícia</title>
 </head>
 <body>
 	<header>
@@ -15,11 +16,11 @@
 	<div id="container-main">
 		<section>
 			<div id="container-noticia">
-				<h1 href ="#">Lorem ipsum dolor sit amet, eli fugiat</h1>
+				<h1>Lorem ipsum dolor sit amet, eli fugiat</h1>
 				<h2>Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur ullamco laboris nisi ut aliquip sunt in culpa qui officia deserunt mollit.</h2>
 				<img src="http://placehold.it/280x360" alt= "Foto noticia"> 
-				<article>
+				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -119,7 +120,7 @@
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</article>
+				</div>
 			</div>
 		</section>
 		<aside>
